// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`translate-test.js should translate new jsfbt payload with option={"jenkins":false,"hashModule":false,"strict":false}: should not throw on missing translations 1`] = `
[
  {
    "fb-locale": "fb_HX",
    "translatedPhrases": [
      "Your FBT Demo",
    ],
  },
]
`;

exports[`translate-test.js should translate new jsfbt payload with option={"jenkins":false,"hashModule":false,"strict":false}: should translate string with enum 1`] = `
[
  {
    "fb-locale": "fb_HX",
    "translatedPhrases": [
      {
        "LINK": "translation is: {name} has a link to share",
        "PAGE": "translation is: {name} has a page to share",
        "PHOTO": "translation is: {name} has a photo to share",
        "POST": "translation is: {name} has a post to share",
        "VIDEO": "translation is: {name} has a video to share",
      },
    ],
  },
]
`;

exports[`translate-test.js should translate new jsfbt payload with option={"jenkins":false,"hashModule":false,"strict":false}: should translate string with metadata entries that create no hidden variation. Note: this string was collected in RN mode. 1`] = `
[
  {
    "fb-locale": "fb_HX",
    "translatedPhrases": [
      {
        "*": "translation is: they shared a photo",
        "1": "translation is: she shared a photo",
        "2": "translation is: he shared a photo",
      },
    ],
  },
]
`;

exports[`translate-test.js should translate new jsfbt payload with option={"jenkins":false,"hashModule":false,"strict":false}: should translate string with no variation 1`] = `
[
  {
    "fb-locale": "fb_HX",
    "translatedPhrases": [
      "Translation data for Your FBT Demo",
    ],
  },
]
`;

exports[`translate-test.js should translate new jsfbt payload with option={"jenkins":false,"hashModule":false,"strict":false}: should translate string with variations and inner strings 1`] = `
[
  {
    "fb-locale": "fb_HX",
    "translatedPhrases": [
      {
        "*": {
          "*": "translation is: {name} has shared {=m2}. View =[number] photos",
          "_1": "translation is: {name} has shared {=m2}. View a photo",
        },
      },
      {
        "*": {
          "*": "translation is: {number} photos",
          "_1": "translation is: a photo",
        },
      },
    ],
  },
]
`;
